apps/homelab-wordpress/envs/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab-wordpress
  namespace: homelab-wordpress
spec:
  rules:
    - host: homelab-wordpress.homelab.local
